# ampiato

./: .release-plz.toml  Cargo.toml
.github/workflows/: publish.yml
.sqlx/: query-2bf6ce612030f7515aa6b049b7bb9705bcf82bf4389711fa3d9c6a302e320a1b.json  query-6a74f5b70d47db3c8c64aa91c3177809e33e194dc3633fbba273a140d6fee125.json
ampiato/: CHANGELOG.md  Cargo.toml  banner.txt
ampiato-macro/: CHANGELOG.md  Cargo.toml
ampiato-macro/src/: lib.rs  macros.rs
ampiato-tem/: Cargo.toml
ampiato-tem/src/: ast.rs  db.rs  lib.rs  ts.rs
ampiato-tem/src/replication/: from_tuple_data.rs  pgoutput.rs  print.rs  replication.rs
ampiato/.sqlx/: query-44de6eb9bac6e0279ca0bf3217136726900f0c8968ba49bacd24f8e30a441088.json  query-99ac21a18cbcb6443d48a6051c41d9ef31516808203dc8476de087f0bab895e8.json
ampiato/src/: db.rs  lib.rs  prelude.rs  value_provider.rs
ampiato/src/core/: defs.rs  mod.rs
ampiato/src/replication/: mod.rs  pgoutput.rs
examples/test/: Cargo.toml  build.rs  db_updater.py  manage.py  quantities.json  quantities.schema.json
examples/test/ampiatomigrations/: models.py
examples/test/ampiatomigrations/migrations/: 0001_initial.py  0002_blokomezeni.py  0002_market_blokvs_blokvykon.py  0003_alter_blokdef_idblokdef.py  0003_delete_blokomezeni.py  0004_remove_blokvs_lin.py
examples/test/src/: main.rs  value_provider.rs
