[package]
name = "ampiato-macro"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.36"
syn = { version = "2.0.58", features = ["full", "extra-traits", "visit-mut"] }
