[package]
name = "ampiato-macro"
description = "🧮 The Rust Powerplant Scheduling Toolkit. A Rust crate to build a great powerplant optimization and scheduling software. Automatic database migrations, consistent code and schema, simple to use entity model, incremental computation, database change capture."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.36"
syn = { version = "2.0.58", features = ["full", "extra-traits", "visit-mut"] }
