[package]
name = "ampiato"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]

# Workspace dependencies
chrono = { workspace = true }
petgraph = { workspace = true }
sqlx = { workspace = true }

# External dependencies
anyhow = "1.0.86"
bisection = "0.1.0"
clap = { version = "4.5.11", features = ["derive"] }
dotenv = "0.15.0"
proc-macro2 = "1.0.86"
colored = "2.1.0"
quote = "1.0.36"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
syn = "2.0.72"
tokio = { version = "1.39.2", features = ["full"] }
strum = "0.26"
strum_macros = "0.26"
rand = "0.8.5"
prettytable = "0.10.0"
byteorder = "1.5.0"
binrw = "0.14.0"
